--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,15 @@
 name: SkyBlockGUI
 main: CrazyTeamVN\SkyBlock\Main
 version: 1.0.2
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
+api: 3.0.0
 author: CrazyTeamVN
 
 commands:
  sbui:
-  description: "Open SkyBlock GUI"
+  description: "Open SkyBlock MENU"
+commands:
+ is:
+  description: "Open SkyBlock MENU"
+commands:
+ sb:
+  description: "Open SkyBlock MENU"
